changed selection-wand search algorithm from DFS to BFS to avoid stack overflow on large canvases

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -131,7 +131,7 @@
 
   --color-canvas-bg: var(--clr-surface-a05);
   //--color-canvas-bg: var(--clr-surface-a10);
-  --color-tooltip-bg: var(--clr-surface-a05);
+  --color-tooltip-bg: var(--clr-surface-a0);
   --color-dialog-bg: var(--clr-surface-a0);
   --color-dialog-hover: var(--clr-surface-a10);
   --color-well-bg: var(--clr-surface-a20);
